flask-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-service
spec:
  selector:
    app: flask
  type: ClusterIP
  ports:
    - protocol: "TCP"
      port: 5001
